package edu.fiuba.algo3.modelo.direcciones;

import edu.fiuba.algo3.modelo.esquina.Posicion;

public interface Direccion {
    public abstract Posicion posicionRelativa();
}
